[tool.poetry]
name = "apos"
version = "0.1.3.2"
description = "The backbone for message-driven applications."
authors = ["Max Kossatz <max@kossatzonline.de>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mkossatz/apos"
repository = "https://github.com/mkossatz/apos"
keywords = ["messenger", "command", "event", "query", "response"]
include = [
    "LICENSE",
]


[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
